[MS 1225] Add CardImage molecule. Fix Header width on Vitamin and Emotion pages. (#482)
* [MS-1225] add image files for vitamin page

* [MS-1225] add alt4 text for vitamin page

* [MS-1225] add CardImage molecule

* [MS-1225] fix Header width for mobile on Vitamin and Emotion pages (text was off-screen)

* [MS-1225] change script and README instructions for image conversion

* [MS-1225] change vitamin page to apply CardImage in easy usage section

* [MS-1225] change vitamin page to apply CardImage in minerals section, enable responsive bootstrap classes for width

* [MS-1225] remove className from CardImage molecule

* [MS-1225] return classes to scss file for minerals section on vitamin page

--- a/src/sass/page/vitamin.scss
+++ b/src/sass/page/vitamin.scss
@@ -21,8 +21,9 @@
 
     .counters-list {
         display: grid;
-        grid-template-columns: repeat(4, 1fr);
-        gap: 1rem 2rem;
+        grid-template-columns: repeat(2, 1fr);
+        grid-auto-rows: 1fr;
+        gap: 1.5rem;
 
         h1 {
             color: map-get($colors, "main");
@@ -35,9 +36,15 @@
             font-size: 1.5rem;
         }
 
-        @include media-breakpoint-down($base-breakpoint) {
-            grid-template-columns: repeat(2, 1fr);
-            gap: 1rem;
+        @include media-breakpoint-down(#{xl}) {
+            h1 {
+                text-align: center;
+            }
+
+            p {
+                width: 100%;
+                text-align: center;
+            }
         }
     }
 
